# goodreads_cli

./: .release-please-config.json  AGENTS.md  CHANGELOG.md  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: MILESTONES.md  PLAN.md  RELEASE.md  RESEARCH.md
samples/: README.md  reading_chart.txt
src/goodreads_cli/: cli.py  http_client.py
src/goodreads_cli/auth/: csrf.py  session.py  user.py
src/goodreads_cli/public/: book.py  reading_chart.py  reading_stats.py  review_list.py  search.py  shelf.py  timeline.py
src/goodreads_tools/: cli.py
src/goodreads_tools/public/: reading_chart.py  review_list.py  timeline.py
tests/: test_auth.py  test_book.py  test_cli.py  test_csrf.py  test_live_book.py  test_live_csrf.py  test_live_search.py  test_live_shelf.py  test_live_timeline.py  test_live_whoami.py  test_reading_stats.py  test_review_list.py  test_search.py  test_shelf.py  test_timeline.py  test_user.py
tests/fixtures/: review_list_page.html
