[project]
name = "goodreads-cli"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Evan Oman" }
]
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "httpx>=0.28.1",
    "plotext>=5.3.2",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "selectolax>=0.4.6",
    "typer>=0.21.0",
]

[project.scripts]
goodreads-cli = "goodreads_cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["goodreads_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"
